--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,16 +2,41 @@ body{
 
 }
 
-#header-banner{
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	left: 0;
-	top: 0;
+
+#div2{
+	background: #d4ebf2;
 }
 
 #intro-svg{
-	position: relative;
-	top: 30%;
-	left: 30%;
+	margin: auto;
+	width: 700px;
+}
+
+
+.arrow{
+	width: 60px;
+	height: 72px;
+	position: absolute;
+	left: 50%;
+	margin-left: -30px;
+	bottom: 20px;
+}
+
+
+.bounce {
+  -moz-animation: bounce 3s infinite;
+  -webkit-animation: bounce 3s infinite;
+  animation: bounce 3s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-15px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
 }
