--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2,6 +2,14 @@ body{
   background: #ffffff;
 }
 
+#intro-paragraph{
+  margin: auto;
+  width: 60%;
+  text-align: center;
+  font-family: 'Pavanam', sans-serif;
+  font-size: 20px;
+}
+
 #grid[data-columns]::before {
   content: '3 .column.size-1of3';
 }
@@ -31,20 +39,16 @@ body{
   font-family: 'Amatica SC', cursive;
   margin: 10px;
   background: #ffffff;
-  color: #555555;
   font-size: 20px;
   text-align: center;
   vertical-align: middle;
+  color: #555555;
 }
 
 .tile:hover{
   cursor: pointer;
 }
 
-.tile:hover h1{
-  cursor: pointer;
-  color: #abc123;
-}
 
 .svg-container{
   margin: auto;
@@ -68,7 +72,7 @@ $delay: 2.5s;
 .line{
   position: absolute;
   background: transparent;
-  opacity: 0.3;
+  opacity: 0.8;
   width: 0px;
   height: 0px;
 
@@ -100,10 +104,40 @@ $delay: 2.5s;
   100% {}
 }
 
-h1{
+div > h1{
+  position: relative;
+  text-decoration: none;
   display: inline;
 }
 
+div > h1:after{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+div > .underline-orange:after {
+  background-color: #d94701;
+}
+
+div > .underline-blue:after {
+  background-color: #219bb5;
+}
+
+
+div:hover > h1:after {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
 
 .orange{
   background: #d94701;
