--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -114,8 +114,8 @@ div > h1:after{
   content: "";
   position: absolute;
   width: 100%;
-  height: 3px;
-  bottom: 0;
+  height: 2px;
+  bottom: -3px;
   left: 0;
   visibility: hidden;
   -webkit-transform: scaleX(0);
@@ -125,10 +125,12 @@ div > h1:after{
 }
 
 div > .underline-orange:after {
+  opacity: 0.5;
   background-color: #d94701;
 }
 
 div > .underline-blue:after {
+  opacity: 0.5;
   background-color: #219bb5;
 }
 
