--- a/public/css/page.css
+++ b/public/css/page.css
@@ -1,3 +1,42 @@
+.pulse_sensor_viz {
+  margin: auto 0;
+  text-align: center; }
 
+#title {
+  color: #555555;
+  font-size: 28px;
+  font-family: 'Amatica SC', cursive;
+  text-align: center; }
+
+#description {
+  font-family: 'Pavanam', sans-serif;
+  width: 60%;
+  margin: 0 auto;
+  font-size: 18.5px;
+  position: relative; }
+
+/*  arrow animaiton */
+.arrow {
+  width: 60px;
+  height: 72px;
+  position: absolute;
+  left: 50%;
+  margin-left: -30px;
+  bottom: 20px; }
+
+/*   arrow  */
+.bounce {
+  -moz-animation: bounce 3s infinite;
+  -webkit-animation: bounce 3s infinite;
+  animation: bounce 3s infinite; }
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0); }
+  40% {
+    transform: translateY(-15px); }
+  60% {
+    transform: translateY(-15px); } }
+/*# sourceMappingURL=style.css.map */
 
 /*# sourceMappingURL=page.css.map */
