--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,17 @@ body {
   width: 60%;
   text-align: center;
   font-family: 'Pavanam', sans-serif;
-  font-size: 20px; }
+  font-size: 17.5px; 
+}
+
+a{
+  text-decoration: none;
+  color: orange;
+}
+
+.padding5{
+  padding: 5px;
+}
 
 #grid[data-columns]::before {
   content: '3 .column.size-1of3'; }
