--- a/public/css/page.css
+++ b/public/css/page.css
@@ -24,6 +24,12 @@
   margin-left: -30px;
   bottom: 20px; }
 
+
+a{
+  text-decoration: none;
+  color: orange;
+}
+
 /*   arrow  */
 .bounce {
   -moz-animation: bounce 3s infinite;
