--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2,13 +2,23 @@ body{
   background: #ffffff;
 }
 
+.zindex{
+  z-index: 1; 
+}
+
 #intro-paragraph{
   margin: auto;
   width: 60%;
   text-align: center;
   font-family: 'Pavanam', sans-serif;
-  font-size: 20px;
+  font-size: 18px;
+  line-height: 23.5px;  
+  a{
+    text-decoration: none; 
+    color: orange; 
+  }
 }
+
 
 #grid[data-columns]::before {
   content: '3 .column.size-1of3';
