--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,13 +16,24 @@ body {
     color: orange; }
 
 #grid[data-columns]::before {
-  content: '3 .column.size-1of3'; }
+  content: '2 .column.size-1of2'; 
+}
 
 .column {
-  float: left; }
+  float: left; 
+}
 
-.size-1of3 {
-  width: 33.333%; }
+.size-1of2 {
+  width: 50.0%; 
+}
+
+#grid-2[data-columns]::before {
+  content: '4 .column.size-1of4'
+}
+
+.size-1of4{
+  width: 25.0%
+}
 
 .height-1 {
   height: 200px;
@@ -33,6 +44,34 @@ body {
   height: 240px;
   border: 1px dashed #d94701;
   line-height: 220px; }
+
+.butterfly-img {
+  margin: 10px;
+  overflow: hidden;
+  background: #ffffff;
+  vertical-align: middle;
+}
+
+.butterfly-desc {
+  margin: 15px;
+  padding: 10px;
+  font-size: 15px;
+  font-family: 'Pavanam', sans-serif;
+}
+
+.blue-border {
+  border: 1px dashed #219bb5;
+}
+
+.orange-border {
+  border: 1px dashed #d94701;
+}
+
+img {
+  border-radius: 2%;
+  max-width: 100%;
+  max-height: 100%;
+}
 
 .tile {
   position: relative;
